copy phone.dat to OutDir of project
Signed-off-by: sndnvaps <sndnvaps@gmail.com>

--- a/phonedata/phonedata.csproj
+++ b/phonedata/phonedata.csproj
@@ -55,4 +55,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy  /r /y $(ProjectDir)..\phone.dat $(ProjectDir)$(OutDir)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
