--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignoreable files
 *.nuget.props
 *.nuget.targets
+phonedata/packages.config
 
 # Microsoft Azure Build Output
 csx/
