use nuget for phonedatacmd test

--- a/phonedatacmd/phonedatacmd.csproj
+++ b/phonedatacmd/phonedatacmd.csproj
@@ -53,6 +53,9 @@
     <StartupObject>phonedatacmd.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Phonedata, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Phonedata.1.1.0\lib\net461\Phonedata.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -75,12 +79,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\phonedata\phonedata.csproj">
-      <Project>{7366ebc6-ad40-4d45-9ee3-18f5e15670c8}</Project>
-      <Name>phonedata</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
